bugfixes - fix title display on mobile - add a timer for requests

--- a/src/components/table/style.css
+++ b/src/components/table/style.css
@@ -28,5 +28,5 @@
 
 .title {
     margin: 0;
-    line-height: 0;
+    font-size: 1.7em;
 }
